--- a/index.html
+++ b/index.html
@@ -45,65 +45,70 @@
 <body>
    <div id="usercard"> <!--Карта профиля, человека, который к нам обратился-->
    </div>
-   <p>Just text</p> <!--Просто текст для проверки-->
-   <!--<a class="link" href="https://mihailgok.ru">Link</a> -->
-   <!--<p class="hint">Some little hint</p> Просто текст-подсказка для проверки-->
-   <button id="btn" class="button">Show/Hide Main Button</button> <!--Кнопка, чтобы скрыть / показать основную кнопку-->
-   <button id="btnED" class="button">Enable/Disable Main Button</button> <!--Кнопка, чтобы сделать кнопку активной/неактивной-->
+   <p>Добро пожаловать в S21 Checkin Bot</p> <!--Просто текст для проверки-->
 </body>
 
 <script>
    let tg = window.Telegram.WebApp; //получаем объект webapp телеграма
+   tg.ready();
+
+   const initData = tg.initData || '';
+   const initDataUnsafe = tg.initDataUnsafe || {};
 
    tg.expand(); //расширяем на все окно
-   tg.MainButton.show();
-   tg.MainButton.text = "Changed Text"; //изменяем текст кнопки
-   tg.MainButton.setText("Changed Text1"); //изменяем текст кнопки иначе
-   tg.MainButton.textColor = "#F55353"; //изменяем цвет текста кнопки
-   tg.MainButton.color = "#143F6B"; //изменяем цвет бэкграунда кнопки
-   tg.MainButton.setParams({"color": "#143F6B"}); //так изменяются все параметры
+   tg.MainButton.show().setText('CLOSE WEBVIEW').onClick(function(){ webviewClose(); });
 
-   let btn = document.getElementById("btn"); //получаем кнопку скрыть/показать
+   function webviewClose() {
+      Telegram.WebApp.close();
+   }
 
-   btn.addEventListener('click', function(){ //вешаем событие на нажатие html-кнопки
-      if (tg.MainButton.isVisible){ //если кнопка показана
-         tg.MainButton.hide() //скрываем кнопку
-      }
-      else{ //иначе
-         tg.MainButton.show() //показываем
-      }
-   });
-
-   let btnED = document.getElementById("btnED"); //получаем кнопку активировать/деактивировать
-   btnED.addEventListener('click', function(){ //вешаем событие на нажатие html-кнопки
-      if (tg.MainButton.isActive){ //если кнопка показана
-         tg.MainButton.setParams({"color": "#E0FFFF"}); //меняем цвет
-         tg.MainButton.disable() //скрываем кнопку
-      }
-      else{ //иначе
-         tg.MainButton.setParams({"color": "#143F6B"}); //меняем цвет
-         tg.MainButton.enable() //показываем
-      }
-   });
-
-   Telegram.WebApp.onEvent('mainButtonClicked', function(){
-      tg.sendData("some string that we need to send");
-      //при клике на основную кнопку отправляем данные в строковом виде
-   });
-
-
-   let usercard = document.getElementById("usercard"); //получаем блок usercard
-
-   let profName = document.createElement('p'); //создаем параграф
-   profName.innerText = `${tg.initDataUnsafe.user.first_name}
-   ${tg.initDataUnsafe.user.last_name}
-   ${tg.initDataUnsafe.user.username} (${tg.initDataUnsafe.user.language_code})`;
-   //выдем имя, "фамилию", через тире username и код языка
-   usercard.appendChild(profName); //добавляем
-
-   let userid = document.createElement('p'); //создаем еще параграф
-   userid.innerText = `${tg.initDataUnsafe.user.id}`; //показываем user_id
-   usercard.appendChild(userid); //добавляем
+   // tg.MainButton.text = "Changed Text"; //изменяем текст кнопки
+   // tg.MainButton.setText("Changed Text1"); //изменяем текст кнопки иначе
+   // tg.MainButton.textColor = "#F55353"; //изменяем цвет текста кнопки
+   // tg.MainButton.color = "#143F6B"; //изменяем цвет бэкграунда кнопки
+   // tg.MainButton.setParams({"color": "#143F6B"}); //так изменяются все параметры
+   //
+   // let btn = document.getElementById("btn"); //получаем кнопку скрыть/показать
+   //
+   // btn.addEventListener('click', function(){ //вешаем событие на нажатие html-кнопки
+   //    if (tg.MainButton.isVisible){ //если кнопка показана
+   //       tg.MainButton.hide() //скрываем кнопку
+   //    }
+   //    else{ //иначе
+   //       tg.MainButton.show() //показываем
+   //    }
+   // });
+   //
+   // let btnED = document.getElementById("btnED"); //получаем кнопку активировать/деактивировать
+   // btnED.addEventListener('click', function(){ //вешаем событие на нажатие html-кнопки
+   //    if (tg.MainButton.isActive){ //если кнопка показана
+   //       tg.MainButton.setParams({"color": "#E0FFFF"}); //меняем цвет
+   //       tg.MainButton.disable() //скрываем кнопку
+   //    }
+   //    else{ //иначе
+   //       tg.MainButton.setParams({"color": "#143F6B"}); //меняем цвет
+   //       tg.MainButton.enable() //показываем
+   //    }
+   // });
+   //
+   // Telegram.WebApp.onEvent('mainButtonClicked', function(){
+   //    tg.sendData("some string that we need to send");
+   //    //при клике на основную кнопку отправляем данные в строковом виде
+   // });
+   //
+   //
+   // let usercard = document.getElementById("usercard"); //получаем блок usercard
+   //
+   // let profName = document.createElement('p'); //создаем параграф
+   // profName.innerText = `${tg.initDataUnsafe.user.first_name}
+   // ${tg.initDataUnsafe.user.last_name}
+   // ${tg.initDataUnsafe.user.username} (${tg.initDataUnsafe.user.language_code})`;
+   // //выдем имя, "фамилию", через тире username и код языка
+   // usercard.appendChild(profName); //добавляем
+   //
+   // let userid = document.createElement('p'); //создаем еще параграф
+   // userid.innerText = `${tg.initDataUnsafe.user.id}`; //показываем user_id
+   // usercard.appendChild(userid); //добавляем
 
 
    //работает только в attachment menu
