--- a/index.html
+++ b/index.html
@@ -56,10 +56,12 @@
    const initDataUnsafe = tg.initDataUnsafe || {};
 
    tg.expand(); //расширяем на все окно
-   tg.MainButton.show().setText('CLOSE WEBVIEW').onClick(function(){ webviewClose(); });
+   tg.MainButton.show().setText('CLOSE WEBAPP').onClick(function(){ webviewClose(); });
+   tg.BackButton.show().setText('BACK').onClick(function(){ webviewClose(); });
 
    function webviewClose() {
-      Telegram.WebApp.close();
+      tg.close();
+      tg.sen
    }
 
    // tg.MainButton.text = "Changed Text"; //изменяем текст кнопки
