--- a/index.html
+++ b/index.html
@@ -59,9 +59,22 @@
    tg.MainButton.show().setText('CLOSE WEBAPP').onClick(function(){ webviewClose(); });
    tg.BackButton.show().onClick(function(){ webviewClose(); });
 
+   let usercard = document.getElementById("usercard"); //получаем блок usercard
+
+   let profName = document.createElement('p'); //создаем параграф
+   profName.innerText = `${tg.initDataUnsafe.user.first_name}
+   ${tg.initDataUnsafe.user.last_name}
+   ${tg.initDataUnsafe.user.username} (${tg.initDataUnsafe.user.language_code})`;
+   //выдем имя, "фамилию", через тире username и код языка
+   usercard.appendChild(profName); //добавляем
+
+   let userid = document.createElement('p'); //создаем еще параграф
+   userid.innerText = `${tg.initDataUnsafe.user.id}`; //показываем user_id
+   usercard.appendChild(userid); //добавляем
+
+
    function webviewClose() {
       tg.close();
-      tg.sen
    }
 
    // tg.MainButton.text = "Changed Text"; //изменяем текст кнопки
