--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 
    function webviewClose() {
       tg.close();
+      tg.sendData("/defapp")
    }
 
    // tg.MainButton.text = "Changed Text"; //изменяем текст кнопки
